--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
+    Hello, world.
     <script src="main.js"></script>
   </body>
 </html>
